# ChangeLog for app-text/dvisvgm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.68 2015/04/13 09:11:14 aballier Exp $

*dvisvgm-1.9.2 (13 Apr 2015)

  13 Apr 2015; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.9.2.ebuild:
  version bump

*dvisvgm-1.9 (05 Jan 2015)

  05 Jan 2015; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.9.ebuild:
  version bump

*dvisvgm-1.8.1 (02 Nov 2014)

  02 Nov 2014; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.8.1.ebuild:
  version bump

*dvisvgm-1.5.2 (13 Mar 2014)

  13 Mar 2014; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.5.2.ebuild:
  version bump

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for alpha, wrt bug #491940

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ia64, wrt bug #491940

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for x86, wrt bug #491940

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for sparc, wrt bug #491940

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ppc64, wrt bug #491940

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ppc, wrt bug #491940

  21 Dec 2013; Chema Alonso <nimiux@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for amd64 wrt bug #491940

  01 Dec 2013; Markus Meier <maekke@gentoo.org> dvisvgm-1.4.ebuild:
  arm stable, bug #491940

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for HPPA (bug #491940).

  05 Sep 2013; Mike Frysinger <vapier@gentoo.org> dvisvgm-1.2.1.ebuild,
  dvisvgm-1.3.ebuild, dvisvgm-1.4.ebuild:
  Restore s390/sh keywords #390671.

*dvisvgm-1.4 (27 Aug 2013)

  27 Aug 2013; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.4.ebuild:
  version bump

*dvisvgm-1.3 (17 May 2013)

  17 May 2013; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.3.ebuild: