@@ -19,14 +19,14 @@ EBUILD dvisvgm-1.3.ebuild 984 SHA256 d3ba5d801c6225825f927d60dcab49d7c9cb2cc1f25
 EBUILD dvisvgm-1.4.ebuild 973 SHA256 aaea88b2dbe4f95f62d19ae6a2bd40aea3c41aac9b1b3e627121c79a16a4247f SHA512 15b8fd8952600edc64258f126dadc85b5a36bb24e8c0dcbb816ecda3e9d286c72aaa61459ab7d624546a3d78396f8b0e4863c08b5218d3710c32c286d383ad34 WHIRLPOOL 540d9a2b6f9a5baf2c91e77133549157fc6474595b250ed67bc6c0e4fb6c6a7b3aa0a2960715703a786fd7d8640654fb641aeaeae35671bc8e2a34ffb41a4951
 EBUILD dvisvgm-1.5.2.ebuild 988 SHA256 71ddbe43533279788f62bd9c87e6ea00632bda466343f4913057cf38f8b22cb8 SHA512 28036e73b67234e5d3661185b9ad94d20f70f9324bbdd3404afe2d2114e3251e18c752fc1b908cc51fe6229bb7655bb55967218830c97d174d7190f2c872b95f WHIRLPOOL b4b4bc89b1af270bbfe42ea64a6d93812ce7f5c3afc86da6df844d3af72d91116098ec5c6c8584b68fe6c52c64cf84b4fb55c311e72c121de1d868055ef5a431
 EBUILD dvisvgm-1.8.1.ebuild 988 SHA256 bcf502a7e452ac96f17782328f212b02db345663ee8b53e73d24f26d0776dd3d SHA512 fc026d8c587ba4550cec2da30d781d17fa24d6ebe24e5de9f2a5881eee2be5a5e1caa788df35f7a9be9aeaa351ac8b25dbbd373222f37c675d11025016bc9ab9 WHIRLPOOL c0f16b4fc6b3c592e7c20337282e77812c249f1a7b932d9df532cb535baef7faa70c9556421e15582097078d7c91c6b9dbb4f47b664d29ff7148b08543b72a15
-EBUILD dvisvgm-1.9.2.ebuild 988 SHA256 20db617fd47e9a30cda50d1cefcd4f1fa4ffac6696d269ff7bc5e3e281093e93 SHA512 bf438ae960dd51dd643d8abd45e722ae2d6bb42fbcc860123d4915735f9cd937e173398899bdafca6ae33fd5cd4ff27559bf1ae777e7a38adce85b71fe985532 WHIRLPOOL 0e727ee3dff982a3d866c1dec39720de7a790db69fcf8fbae17191f85825a1ae301a9c68b5af7cbe09c46c1ef559133134ddf3e01f4ef5a33ee17a56f02e7ee5
+EBUILD dvisvgm-1.9.2.ebuild 1023 SHA256 77c688a35da357c5ccb37ece2f7d1d7b453ea6d90c1e121ce119118a3d753a54 SHA512 f2f741782c24416acd004a5c9c2b865ac30fc62f7d06a38bf0e078355b29c481e9cdc54ecbf44bdd7bcdf8096279e5f3bc7c8d5047b7de3dda8b96ada263a4e7 WHIRLPOOL 268e597c90c4adfb746ba8a5db53e9288f4c51dffb330222abc5108a406877aaedea677a52950c85cc161b38798babf54335731e0d8f171c59f3f5a291886c82
 EBUILD dvisvgm-1.9.ebuild 986 SHA256 18ddd4d0ef7160510bf46db5e49e7ded35128946a148dc0340df9324d70f2a05 SHA512 452c9dffa0b7328dd074519b8d340d0bf3d0ff5256725ec7ad3d27d8ab35e17f00cf274242db66d0bd6d9fe8b897ba2108172b423f0862ad4d74c8984081606b WHIRLPOOL d085ab7b06b449fd086f1775bde1599fa1d96c13f00b5c5a4852a5c9c6bd7ac1fef6e67dc6eb9dbf7777212b9fef880320c443249062ce9daeecf50e5e34c0d6
-MISC ChangeLog 8307 SHA256 137d85666a098eb438b3f20b50c6f66a0194259306a691092ddbac5bf6d47f05 SHA512 0f4328a5ac5f17ef15d71be60b608f0057ee946ec83b074b5b3ef76e53a7a7bd9a42296398ca811724de45ace0c69004650aed861317e10115d51590e7271dc0 WHIRLPOOL aa58d5662c6b89420905689670e37d8efe4fe1c66552f71dd9efa5cc65750acad3bed1e1e044a4825f57af161d57b40acbaadda7e6c8e4b046ab6dd6739a4b23
+MISC ChangeLog 8445 SHA256 6984e405157b3c7e2984d00fc76badb766f680708628de130cc8822027254dc6 SHA512 f9a44310e24da2a2ee16592b92d84d4ee418cb4dcc492385e1ca1457db65205a11804b20de7013dc3eb6af380f74dcd27f89a087a71cb6a68667129a1d4c690b WHIRLPOOL db4a5a7d5445815c87d7456400399b6815274a6d96bcce0115293290a1d290d1487b25c1d4dd49ba803c4d8cb7a63b0062424e0198a2f5531713d074ae2835ab
 MISC metadata.xml 156 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6 SHA512 cecee760dd314c182191a282255f2415e479a8cc6cab9cb664e5b82d52b700a3444aa0d33b30a721a756e432819decc8c92588c769ea6fd33dabe9adc16d75c0 WHIRLPOOL 88a15092b616df72dd0ae91d89c80d852ad49ab9fee8a9688f3a1be59c365cc3dc77e90be68b5c4ec9cc1dc9885e06e723abc96830df4d0628df8c97f8b2a332
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUriDMACgkQvFcC4BYPU0p+BACdH931skSO0v9kpn5nHW68TYXk
-tBEAn1gXYOXK/bOMRBo1iEmd0eBtz+Bt
-=Z6Ym
+iEYEAREIAAYFAlUr224ACgkQvFcC4BYPU0r/hwCgyWzxtyEFZVc0Ur3RfZ35Vy2M
+llgAnAzqqwWrap4H6QE+GvecXh1XPKJu
+=zUzO
 -----END PGP SIGNATURE-----
