@@ -1,5 +1,5 @@
 DEFINED_PHASES=-
-DEPEND=virtual/tex-base app-text/ghostscript-gpl >=media-gfx/potrace-1.10-r1 media-libs/freetype:2 sys-libs/zlib virtual/pkgconfig test? ( dev-cpp/gtest )
+DEPEND=virtual/tex-base app-text/ghostscript-gpl >=media-gfx/potrace-1.10-r1 media-libs/freetype:2 sys-libs/zlib app-text/xmlto app-text/asciidoc virtual/pkgconfig test? ( dev-cpp/gtest )
 DESCRIPTION=Converts DVI files to SVG
 EAPI=4
 HOMEPAGE=http://dvisvgm.sourceforge.net/
@@ -10,4 +10,4 @@ RDEPEND=virtual/tex-base app-text/ghostscript-gpl >=media-gfx/potrace-1.10-r1 me
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/dvisvgm/dvisvgm-1.9.2.tar.gz
-_md5_=c300de7159c8b91371db61a49b6badbe
+_md5_=750057993efa2062da341a35dfc4558b
