@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=dev-libs/libgpg-error-1.8
+DESCRIPTION=X.509 and CMS (PKCS#7) library
+EAPI=4
+HOMEPAGE=http://www.gnupg.org/related_software/libksba
+IUSE=static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=LGPL-3+ GPL-2+ GPL-3
+RDEPEND=>=dev-libs/libgpg-error-1.8
+SLOT=0
+SRC_URI=mirror://gnupg/libksba/libksba-1.3.3.tar.bz2
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=480d40f9b1611773aca8ddac74387e1a
