@@ -1,6 +1,9 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.68 2015/04/13 09:11:14 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.69 2015/04/13 15:06:21 aballier Exp $
+
+  13 Apr 2015; Alexis Ballier <aballier@gentoo.org> dvisvgm-1.9.2.ebuild:
+  add missing app-text/{xmlto,asciidoc} build dep, bug #546458
 
 *dvisvgm-1.9.2 (13 Apr 2015)
 
